--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.12.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^1.1.5",
     "react-transition-group": "^4.4.2",
     "uuid": "^7.0.2"
   },
